Update location details in sidebar to include office address

--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ author:
   name             : "Mazhar Ali"
   pronouns         : # example: "she/her"  
   bio              : "PhD Candidate in Computer Science at Soongsil University, Seoul, South Korea. Research focuses on Federated Learning, Smart Grids, and Artificial Intelligence."
-  location         : "Seoul, South Korea"
+  location         : "Seoul, South Korea | Office: 21408, Information Science Building, Soongsil University"
   employer         : "Soongsil University"
   uri              : # URL
   email            : "mazhar@soongsil.ac.kr" 
